--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
+  @apply antialiased;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,6 +16,13 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.button-sm:hover,
+.button-text:hover,
+.button-lg:hover,
+a:hover {
+  opacity: 0.66;
 }
 
 @media (prefers-color-scheme: dark) {
