directory: add sort, fix timeline dot border hijinx
Supersedes #9

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,10 @@ a:hover {
 .markdown a {
   @apply break-words;
 }
+
+.border-l-hack::after {
+  @apply border-l border-dashed border-wall-400 absolute top-4 z-0;
+  height: calc(100% - 1rem);
+  left: -1px;
+  content: "";
+}
